<resources>
    <string name="app_name">ForTech</string>
    <string name="emailId">E-Mail_ID</string>
    <string name="password">Password</string>
    <string name="tagLine">Your FTR, Our Concern</string>
    <string name="sign_in">"New User ? Sign In "</string>
    <string name="here">Sign Up</string>
    <string name="new_password">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="designation">Designation</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="notificaion">Notification</string>
    <string-array name="designation">
        <item>Designation</item>
        <item>Student</item>
        <item>Guide</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profilePic">Profile Picture</string>
    <string name="yourProfile">My Account</string>
    <string name="Name">"Fortech User "</string>
    <string name="Email">Email ID :</string>
    <string name="desg">Designation :</string>
    <string name="projCount">No. of Projects :</string>
    <string name="logOut">Log Out</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="new_user_sign_in">"New User? "</string>
    <string name="projectTitle">Project Title</string>
    <string name="projectDomain">Project Domain</string>
    <string name="projectGuide">Project Guide</string>
    <string name="projectguide">Project Guide</string>
    <string name="domainExpert">Domain Expert</string>
    <string name="createProject">Create Project</string>
    <string name="member_1">Member 1</string>
    <string name="project_name">Project Name</string>
    <string name="member_2">Member 2</string>
    <string name="member_3">Member 3</string>
    <string name="member_4">Member 4</string>
    <string name="member_5_optional">Member 5(Optional)</string>
    <string name="is_your_project">Is Your Project ?</string>
    <string name="project_domain">Project Domain</string>
    <string name="date_of_conduction">Date</string>
    <string name="checked">Done</string>
    <string name="ftr_0">FTR 0</string>
    <string name="ftr_1">FTR 1</string>
    <string name="ftr_2">FTR 2</string>
    <string name="ftr_conducted">FTR</string>
    <string name="ftr_3">FTR 3</string>
    <string name="ftr_4">FTR 4</string>
    <string name="ftr_5">FTR 5</string>
    <string name="ftr_6">FTR 6</string>
    <string name="project_title">Project Title</string>
    <string name="a">asd</string>
    <string name="accName">Name :</string>
    <string name="accEmail">user@fortech.in</string>
    <string name="accDesg">Guide/Student</string>
    <string name="notifications">Notifications</string>
    <string name="forgot_password">Forgot Password ?</string>

</resources>
