<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context="com.fortech.protalendeavours.fortech.SignupActivity">


    <EditText
        android:id="@+id/firstName"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailId"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/firstName"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/firstName"
        android:layout_below="@+id/firstName"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/emailId"
        android:layout_below="@+id/emailId"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/newpassword"
        android:layout_below="@+id/newpassword"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/confirmpassword"
        android:layout_below="@+id/confirmpassword"
        android:layout_marginTop="18dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/spinner"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="71dp"
        android:background="#445280"
        android:text="@string/sign_up"
        android:textColor="@android:color/background_light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#445280">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/logo_img" />
    </RelativeLayout>

</android.widget.RelativeLayout>
