<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fortech.protalendeavours.fortech.AccountFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3b108a">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/user_1" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/addImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/profilePhoto"
                    android:layout_alignBottom="@+id/profilePhoto"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:src="@android:drawable/ic_menu_camera" android:focusable="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/yourProfile"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:text="@string/accName"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingBottom="10dp"
                android:paddingStart="30dp"
                android:paddingTop="5dp"
                android:text="@string/Name"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:text="@string/Email"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingBottom="10dp"
                android:paddingStart="30dp"
                android:paddingTop="5dp"
                android:text="@string/accEmail"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:text="@string/desg"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accDesg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingBottom="10dp"
                android:paddingStart="30dp"
                android:paddingTop="5dp"
                android:text="@string/accDesg"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <Button
                android:id="@+id/acclogOut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/logOut" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>
