<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:id="@+id/projectCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPaddingBottom="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/NewAppTheme"
        app:cardCornerRadius="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/projectTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/projectTitle"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/projectDomain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/projectTitle"
                android:layout_below="@+id/projectTitle"
                android:layout_marginStart="25dp"
                android:layout_marginTop="3dp"
                android:fontFamily="serif"
                android:text="@string/projectDomain"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/projectGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/projectTitle"
                android:layout_below="@+id/projectDomain"
                android:layout_marginStart="25dp"
                android:layout_marginTop="3dp"
                android:fontFamily="serif"
                android:text="@string/projectguide"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/domainExpert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/projectTitle"
                android:layout_below="@+id/projectGuide"
                android:layout_marginStart="25dp"
                android:layout_marginTop="3dp"
                android:fontFamily="serif"
                android:text="@string/domainExpert"
                android:textColor="@android:color/white"
                android:textSize="17sp" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
